# pregnancy-medication-checker

./: .gitignore  README.md
pregnancy-med-checker/backend/: Makefile  README.md  pyproject.toml
pregnancy-med-checker/backend/app/: auth.py  demo_patients.py  fhir.py  interactions.py  main.py  messaging.py  notes.py  openfda.py  pubmed.py  rxnorm.py
pregnancy-med-checker/backend/data/: messages.json  notes.json
pregnancy-med-checker/backend/scripts/: convert_csv_to_parquet.py  fhir-delete-all-ingested.py  fhir-ingest-synthea-all-bundles.py  fhir-list-ingested.py  view_fhir_audit_logs.py
pregnancy-med-checker/backend/services/drug_interaction/: constants.py  interaction_service.py
pregnancy-med-checker/backend/services/drug_interaction/data/: db_drug_interactions.parquet
pregnancy-med-checker/backend/services/drugbank_integration/: constants.py  data_explorer.py  data_extractor.py
pregnancy-med-checker/backend/services/drugbank_integration/scripts/: README.md  explore_drugbank_data.py  extract_interactions.py  extract_interactions_sample.py  generate_interactions_summary.py
pregnancy-med-checker/backend/services/fhir_integration/: __init__.py
pregnancy-med-checker/backend/services/fhir_integration/application/: api_handlers.py
pregnancy-med-checker/backend/services/fhir_integration/domain/: constants.py  models.py  protocols.py
pregnancy-med-checker/backend/services/fhir_integration/infrastructure/client/: fhir_client.py
pregnancy-med-checker/backend/services/fhir_integration/utils/: audit_logger.py
pregnancy-med-checker/backend/services/messaging/: __init__.py  messaging_service.py
pregnancy-med-checker/backend/services/notes/: __init__.py  notes_service.py
pregnancy-med-checker/backend/services/openfda_integration/: __init__.py  openfda_client.py  schemas.py  utils.py
pregnancy-med-checker/backend/services/pubmed_integration/: __init__.py  pubmed_service.py
pregnancy-med-checker/backend/services/rxnorm_integration/: __init__.py  rxnorm_service.py
pregnancy-med-checker/backend/services/synthea/: .env.example  README.md  my.properties  run_synthea.sh
pregnancy-med-checker/backend/services/synthea/my_edited_modules/: contraceptives.json  female_reproduction.json  sexual_activity.json
pregnancy-med-checker/backend/services/synthea/my_modules/: gestational_weeks.json  lactation_status.json  pregnancy_exposures.json
pregnancy-med-checker/backend/services/synthea/scripts/: add_pregnancy_observations.py
pregnancy-med-checker/backend/tests/: test_fhir.py  test_interaction_service.py  test_pregnancy_data.py
(+99 files in other folders)
